--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -63,7 +63,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "c2cca9d8-cb7a-42d4-b9b1-cb629f932109",
+        "outputId": "58f8c945-6fb9-491b-9e90-d52c132f6750",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -98,11 +98,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "hAjh6yOLYPZm",
+        "outputId": "7da5ed35-ed3d-4711-891b-d8bbe5478792",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "56be3c80-23be-405d-e592-1b95125f7004"
+        }
       },
       "source": [
         "data_train = data[data['Usage']=='Training']\n",
@@ -123,7 +123,7 @@
         "X_dev = np.array(X_dev, dtype='float32').reshape(-1,48,48,1)\n",
         "X_dev = X_dev/255.0"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,11 +140,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "oXIX_VLMYJty",
+        "outputId": "1ac8e835-0c25-4bae-84d2-211d107c4789",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        },
-        "outputId": "c39b7a2e-a81f-489d-bc6b-dd92c10528da"
+        }
       },
       "source": [
         "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
@@ -159,7 +159,7 @@
         "# print(np.bincount(y_train))\n",
         "# print(np.bincount(y_dev))"
       ],
-      "execution_count": 85,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 85
+          "execution_count": 5
         }
       ]
     },
@@ -250,7 +250,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "1a2c97e7-fbd3-44cc-979c-8dc78f311199",
+        "outputId": "028e628e-e0ef-4963-c7fd-d5071ca02479",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
@@ -276,7 +276,7 @@
         "\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,31 +295,31 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "c4f76a7b-4c0d-44df-c4bf-ec472ed408dd",
+        "outputId": "a85f6796-b35f-4dbd-d441-41787ce1a873",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 241
+          "height": 221
         }
       },
       "source": [
         "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
             "Epoch 1/5\n",
-            "28709/28709 [==============================] - 17s 593us/sample - loss: 0.1279 - acc: 0.9605 - val_loss: 2.2538 - val_acc: 0.5358\n",
+            "28709/28709 [==============================] - 17s 587us/sample - loss: 1.6632 - acc: 0.3408 - val_loss: 1.5236 - val_acc: 0.4035\n",
             "Epoch 2/5\n",
-            "28709/28709 [==============================] - 17s 590us/sample - loss: 0.1167 - acc: 0.9637 - val_loss: 2.3105 - val_acc: 0.5327\n",
+            "28709/28709 [==============================] - 11s 369us/sample - loss: 1.3813 - acc: 0.4683 - val_loss: 1.3052 - val_acc: 0.4890\n",
             "Epoch 3/5\n",
-            "28709/28709 [==============================] - 17s 589us/sample - loss: 0.1082 - acc: 0.9667 - val_loss: 2.2654 - val_acc: 0.5210\n",
+            "28709/28709 [==============================] - 11s 366us/sample - loss: 1.1928 - acc: 0.5467 - val_loss: 1.2444 - val_acc: 0.5166\n",
             "Epoch 4/5\n",
-            "28709/28709 [==============================] - 17s 590us/sample - loss: 0.0993 - acc: 0.9698 - val_loss: 2.3851 - val_acc: 0.5380\n",
+            "28709/28709 [==============================] - 10s 365us/sample - loss: 0.9596 - acc: 0.6442 - val_loss: 1.2267 - val_acc: 0.5347\n",
             "Epoch 5/5\n",
-            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0908 - acc: 0.9735 - val_loss: 2.2408 - val_acc: 0.5252\n"
+            "28709/28709 [==============================] - 10s 365us/sample - loss: 0.6728 - acc: 0.7555 - val_loss: 1.3313 - val_acc: 0.5272\n"
           ],
           "name": "stdout"
         },
@@ -327,13 +327,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fba72ea9fd0>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f7b7ff066d8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 7
         }
       ]
     },
@@ -342,11 +342,11 @@
       "metadata": {
         "id": "ABbKc8-Eq64L",
         "colab_type": "code",
+        "outputId": "b8f903f0-3682-41ca-e9b9-4bffffd7dc9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 153
-        },
-        "outputId": "de9ad7ad-10f3-4a6b-d893-e955ec2b00bf"
+          "height": 136
+        }
       },
       "source": [
         "# Confusion matrix\n",
@@ -355,24 +355,23 @@
         "y_pred = np.argmax(model.predict(X_dev), axis=1)\n",
         "\n",
         "print(pd.DataFrame(\n",
-        "  confusion_matrix(y_dev, y_pred), \n",
+        "  confusion_matrix(y_dev, y_pred,normalize='true'), \n",
         "  index=emotion_cat.values(), \n",
         "  columns=emotion_cat.values()\n",
         "  ))"
       ],
-      "execution_count": 65,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "          Angry  Disgust  Fear  Happy  Sad  Surprise  Neutral\n",
-            "Angry       196        9    50     42  111        17       42\n",
-            "Disgust      11       29     1      3    9         1        2\n",
-            "Fear         67        3   178     33  114        44       57\n",
-            "Happy        48        2    31    629  100        22       63\n",
-            "Sad          91        7    90     56  293        14      102\n",
-            "Surprise     30        1    31     22   17       286       28\n",
-            "Neutral      75        4    49     67  134        19      259\n"
+            "[['41.11%' '0.86%' '8.14%' '12.85%' '19.06%' '4.07%' '13.92%']\n",
+            " ['10.71%' '44.64%' '12.50%' '14.29%' '12.50%' '0.00%' '5.36%']\n",
+            " ['10.08%' '1.01%' '35.08%' '9.88%' '21.37%' '9.07%' '13.51%']\n",
+            " ['3.80%' '0.45%' '2.01%' '75.87%' '6.82%' '1.90%' '9.16%']\n",
+            " ['14.09%' '0.61%' '9.95%' '11.79%' '44.26%' '1.84%' '17.46%']\n",
+            " ['4.82%' '0.00%' '7.71%' '7.95%' '5.54%' '68.19%' '5.78%']\n",
+            " ['11.04%' '0.66%' '6.59%' '12.69%' '20.26%' '1.81%' '46.95%']]\n"
           ],
           "name": "stdout"
         }
@@ -383,11 +382,11 @@
       "metadata": {
         "id": "2ud4lo1GWOQd",
         "colab_type": "code",
+        "outputId": "3a5947fa-f8bc-4567-dfc7-c220fd8e1853",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "8ce14852-1c42-4798-9bd7-3bdee3183364"
+        }
       },
       "source": [
         "# Balance class weights\n",
@@ -397,7 +396,7 @@
         "print(list(emotion_cat.values()))\n",
         "print(class_weights)"
       ],
-      "execution_count": 87,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,32 +414,32 @@
       "metadata": {
         "id": "Zh8BC8laPHbz",
         "colab_type": "code",
+        "outputId": "1c79f9da-88de-49d7-86bc-7f02f245ef65",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 241
-        },
-        "outputId": "5e24c6b2-457a-43de-fbcb-dcecc4f14015"
+          "height": 221
+        }
       },
       "source": [
         "# Retrain with balanced class weights\n",
         "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev),class_weight=class_weights)"
       ],
-      "execution_count": 90,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
             "Epoch 1/5\n",
-            "28709/28709 [==============================] - 17s 589us/sample - loss: 0.0750 - acc: 0.9783 - val_loss: 2.4106 - val_acc: 0.5297\n",
+            "28709/28709 [==============================] - 11s 366us/sample - loss: 0.4339 - acc: 0.8453 - val_loss: 1.5362 - val_acc: 0.5274\n",
             "Epoch 2/5\n",
-            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0602 - acc: 0.9827 - val_loss: 2.4341 - val_acc: 0.5263\n",
+            "28709/28709 [==============================] - 10s 365us/sample - loss: 0.2937 - acc: 0.9015 - val_loss: 1.7072 - val_acc: 0.5291\n",
             "Epoch 3/5\n",
-            "28709/28709 [==============================] - 17s 584us/sample - loss: 0.0624 - acc: 0.9820 - val_loss: 2.4693 - val_acc: 0.5174\n",
+            "28709/28709 [==============================] - 11s 367us/sample - loss: 0.2080 - acc: 0.9300 - val_loss: 1.9483 - val_acc: 0.5185\n",
             "Epoch 4/5\n",
-            "28709/28709 [==============================] - 17s 584us/sample - loss: 0.0586 - acc: 0.9824 - val_loss: 2.5053 - val_acc: 0.5291\n",
+            "28709/28709 [==============================] - 11s 366us/sample - loss: 0.1686 - acc: 0.9457 - val_loss: 2.0082 - val_acc: 0.5277\n",
             "Epoch 5/5\n",
-            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0628 - acc: 0.9820 - val_loss: 2.7494 - val_acc: 0.5163\n"
+            "28709/28709 [==============================] - 10s 365us/sample - loss: 0.1526 - acc: 0.9525 - val_loss: 2.0256 - val_acc: 0.5369\n"
           ],
           "name": "stdout"
         },
@@ -448,13 +447,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fb90e12f2e8>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f7a667dfe48>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 90
+          "execution_count": 10
         }
       ]
     }
