--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -20,7 +20,10 @@
    },
    "outputs": [],
    "source": [
-    "#tensorflow_version 1.x"
+    "#tensorflow_version 1.x\n",
+    "#!pip install keras-vggface\n",
+    "#!conda install scikit-image\n",
+    "#!conda install pydot"
    ]
   },
   {
@@ -69,11 +72,10 @@
     "from sklearn.metrics import *\n",
     "from keras.engine import Model\n",
     "from keras.layers import Input, Flatten, Dense, Activation, Conv2D, MaxPool2D, BatchNormalization, Dropout, MaxPooling2D\n",
+    "import skimage\n",
     "from skimage.transform import rescale, resize\n",
     "\n",
-    "import pydot\n",
-    "\n",
-    "!python -c \"import skimage\""
+    "import pydot\n"
    ]
   },
   {
@@ -765,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
