clear output, change data file name

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -28,29 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "2nz38mJZXN_P"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/tensorflow_core/__init__.py:1467: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -90,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -100,16 +84,7 @@
     "id": "nUcd6yIGduUW",
     "outputId": "94e06002-1afb-4fab-b6fc-f69cef85fa1c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.15.2\n",
-      "2.2.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(tf.__version__)\n",
     "print(keras.__version__)"
@@ -121,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('fer2013/fer2013.csv', sep=r'\\s*,\\s*', header=0, encoding='ascii', engine='python')\n",
+    "data = pd.read_csv('fer2013/icml_face_data.csv', sep=r'\\s*,\\s*', header=0, encoding='ascii', engine='python')\n",
     "data.head()\n",
     "\n",
     "data_train = data[data['Usage'] == 'Training']\n",
@@ -141,33 +116,6 @@
     "\n",
     "print(data_train.shape)\n",
     "print(data_dev.shape)\n",
-    "print(data_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('fer2013/icml_face_data.csv') \n",
-    "print(data.head())\n",
-    "print(data.shape)\n",
-    "\n",
-    "print(data[' Usage'].unique())\n",
-    "\n",
-    "data_dev2 = data[data[' Usage'] == 'PublicTest']\n",
-    "#print('Number samples in the development dataset: ', data_dev.shape[0])\n",
-    "print(data_dev2.head())\n",
-    "\n",
-    "data_dev2.to_csv('fer2013/dev2.csv')\n",
-    "print(data_dev2.shape)\n",
-    "\n",
-    "data_test = data[data[' Usage'] == 'PrivateTest']\n",
-    "#print('Number samples in the development dataset: ', data_dev.shape[0])\n",
-    "print(data_test.head())\n",
-    "\n",
-    "data_test.to_csv('fer2013/test.csv')\n",
     "print(data_test.shape)"
    ]
   },
