--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -63,10 +63,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "c47dba29-7ab2-461e-92dd-e9a3890a7b20",
+        "outputId": "e48210cc-ef44-4ddb-928c-a3cdb1a769e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 35
         }
       },
       "source": [
@@ -78,16 +78,12 @@
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -101,29 +97,7 @@
         "colab": {}
       },
       "source": [
-        "#emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
-        "\n",
-        "# See the target distribution (check for imbalance)\n",
-        "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
-        "#target_counts.columns = ['emotion', 'number_samples']\n",
-        "#target_counts['emotion'] = target_counts['emotion'].map(emotion_cat)\n",
-        "#target_counts\n",
-        "\n",
-        "# Select randomly 10 images\n",
-        "#random_seed = 1\n",
-        "#data_sample = data.sample(10, random_state=random_seed)\n",
-        "#f, axarr = plt.subplots(2, 5, figsize=(20, 10))\n",
-        "\n",
-        "#i, j = 0, 0\n",
-        "#for idx, row in data_sample.iterrows():\n",
-        "#    img = np.array(row['pixels']).reshape(48,48)\n",
-        "#    axarr[i,j].imshow(img, cmap='gray')\n",
-        "#    axarr[i,j].set_title(emotion_cat[row['emotion']])\n",
-        "#    if j==4:\n",
-        "#        i += 1\n",
-        "#        j = 0\n",
-        "#    else:\n",
-        "#        j += 1"
+        "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -162,11 +136,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "18830ae3-2226-4b50-db55-2b74ba8627b1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        }
+        "colab": {}
       },
       "source": [
         "#Baseline model\n",
@@ -188,18 +158,8 @@
         "\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -207,41 +167,31 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "ef27572c-b831-42cd-cfc4-233392fe61ab",
+        "outputId": "90e5009a-8541-4eb6-b3ca-068934ceaa61",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
+          "height": 235
         }
       },
       "source": [
         "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
-            "Epoch 1/10\n",
-            "28709/28709 [==============================] - 17s 584us/sample - loss: 1.6761 - accuracy: 0.3339 - val_loss: 1.5370 - val_accuracy: 0.4249\n",
-            "Epoch 2/10\n",
-            "28709/28709 [==============================] - 16s 560us/sample - loss: 1.4407 - accuracy: 0.4403 - val_loss: 1.4101 - val_accuracy: 0.4505\n",
-            "Epoch 3/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 1.2629 - accuracy: 0.5178 - val_loss: 1.2694 - val_accuracy: 0.5157\n",
-            "Epoch 4/10\n",
-            "28709/28709 [==============================] - 16s 566us/sample - loss: 1.0398 - accuracy: 0.6124 - val_loss: 1.2580 - val_accuracy: 0.5244\n",
-            "Epoch 5/10\n",
-            "28709/28709 [==============================] - 16s 564us/sample - loss: 0.7337 - accuracy: 0.7324 - val_loss: 1.2882 - val_accuracy: 0.5380\n",
-            "Epoch 6/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.4361 - accuracy: 0.8464 - val_loss: 1.5633 - val_accuracy: 0.5439\n",
-            "Epoch 7/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.2589 - accuracy: 0.9119 - val_loss: 1.6783 - val_accuracy: 0.5352\n",
-            "Epoch 8/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.1866 - accuracy: 0.9403 - val_loss: 1.9683 - val_accuracy: 0.5414\n",
-            "Epoch 9/10\n",
-            "28709/28709 [==============================] - 16s 565us/sample - loss: 0.1464 - accuracy: 0.9553 - val_loss: 2.1586 - val_accuracy: 0.5358\n",
-            "Epoch 10/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1323 - accuracy: 0.9607 - val_loss: 2.0127 - val_accuracy: 0.5325\n"
+            "Epoch 1/5\n",
+            "28709/28709 [==============================] - 26s 897us/sample - loss: 0.5994 - acc: 0.7847 - val_loss: 1.3848 - val_acc: 0.5311\n",
+            "Epoch 2/5\n",
+            "28709/28709 [==============================] - 26s 896us/sample - loss: 0.3668 - acc: 0.8747 - val_loss: 1.5980 - val_acc: 0.5308\n",
+            "Epoch 3/5\n",
+            "28709/28709 [==============================] - 26s 891us/sample - loss: 0.2380 - acc: 0.9213 - val_loss: 1.7969 - val_acc: 0.5216\n",
+            "Epoch 4/5\n",
+            "28709/28709 [==============================] - 26s 891us/sample - loss: 0.1849 - acc: 0.9428 - val_loss: 2.0679 - val_acc: 0.5130\n",
+            "Epoch 5/5\n",
+            "28709/28709 [==============================] - 26s 889us/sample - loss: 0.1480 - acc: 0.9549 - val_loss: 2.1488 - val_acc: 0.5074\n"
           ],
           "name": "stdout"
         },
@@ -249,20 +199,124 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f97d9e84e10>"
+              "<tensorflow.python.keras.callbacks.History at 0x7ff210dcdba8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 32
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ABbKc8-Eq64L",
+        "id": "AkkxgoSy1Ot_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5a879860-e62d-44d6-e26d-d746682a3e50"
+      },
+      "source": [
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "test_generator = test_datagen.flow_from_directory(\n",
+        "        '/content/drive/My Drive/cs230 project/webcam images',\n",
+        "        target_size=(48, 48),\n",
+        "        color_mode='grayscale',\n",
+        "        shuffle = False,\n",
+        "        class_mode='categorical',\n",
+        "        batch_size=1)\n",
+        "\n",
+        "nb_samples = len(test_generator.filenames)\n",
+        "\n",
+        "y_true = test_generator.classes\n",
+        "#evaluate_generator\n",
+        "y_pred = model.predict_generator(test_generator, steps=nb_samples).argmax(axis=1)"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 84 images belonging to 7 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AZMRafd0Cl0U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        },
+        "outputId": "c1245ec5-cc25-40d9-fb9a-5379406e8897"
+      },
+      "source": [
+        "y_true-y_pred"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-6, -6, -6, -2, -2, -6, -4,  0, -2, -2, -2, -6, -6, -6, -4, -6, -6,\n",
+              "       -3, -6, -6, -3, -5,  1, -2, -3, -3, -3,  1, -1,  1, -3, -3, -5, -3,\n",
+              "       -5, -3, -5, -3, -3, -5, -5, -5, -5, -5, -5, -2, -3,  1, -5, -2,  0,\n",
+              "        0,  0,  0,  0, -3,  0,  0,  0,  0, -3,  1, -1,  0,  0,  0,  0,  2,\n",
+              "       -2, -2, -2, -2,  2,  2,  2,  2,  2,  0,  0,  3,  0,  0,  0,  0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oz7UpuRZDGxb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ef1913aa-6070-4197-e6b3-f615b83e6fe4"
+      },
+      "source": [
+        "test_generator.filenames[0]"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0 angry/angry0000.png'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ltHJVttzFT3s",
         "colab_type": "code",
         "colab": {}
       },
