--- a/fer2013_LATEST.ipynb
+++ b/fer2013_LATEST.ipynb
@@ -313,18 +313,19 @@
       "source": [
         "training_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/train.csv'\n",
         "dev_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/dev.csv'\n",
+        "test_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/test.csv'\n",
         "\n",
         "aug = ImageDataGenerator(\n",
         "    rotation_range  = 10,\n",
         "    shear_range     = 10, # 10 degrees\n",
         "    zoom_range      = 0.1,\n",
         "    fill_mode       = 'reflect',\n",
-        "    horizontal_flip = True)\n",
-        "\n",
-        "\n",
+        "    horizontal_flip = True\n",
+        ")\n",
         "\n",
         "train_generator = get_data(training_dataset_dir,  bs=BS, aug=aug)\n",
         "dev_generator   = get_data(dev_dataset_dir, bs=BS, aug=None)\n",
+        "test_generator   = get_data(test_dataset_dir, bs=BS, aug=None)\n",
         "    #X_dev_res, Y_dev_res  = get_data(dev_dataset_dir)\n",
         "\n",
         "# Generate batches of tensor image data with real-time data augmentation. The data will be looped over (in batches) indefinitely\n",
@@ -365,7 +366,8 @@
         "    validation_steps=3509 // BS,\n",
         "    shuffle=True,\n",
         "    epochs=EPOCHS,\n",
-        "    callbacks=[rlrop]\n",
+        "    callbacks=[rlrop],\n",
+        "    use_multiprocessing=True,\n",
         ") "
       ],
       "execution_count": 20,
@@ -438,12 +440,78 @@
       "metadata": {
         "id": "JSSv08SHF0bC",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "22092443-0ddb-443d-9aad-e26bb64dcd8a"
       },
       "source": [
         "print('\\n# Evaluate on dev data')\n",
-        "results_dev = model.evaluate(X_dev, Y_dev , batch_size=128)\n",
+        "results_dev = model.evaluate_generator(dev_generator, 3509 // BS)\n",
         "print('dev loss, dev acc:', results_dev)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n",
+            "dev loss, dev acc: [1.0931638699990731, 0.5992476851851852]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ev4sDYDlOsqk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        },
+        "outputId": "b7c641fb-854c-41f9-d000-bc27163d861f"
+      },
+      "source": [
+        "print('\\n# Evaluate on dev data')\n",
+        "results_test = model.evaluate_generator(test_generator, 3509 // BS)\n",
+        "print('dev loss, dev acc:', results_test)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-9433af67778c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n# Evaluate on dev data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresults_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3509\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mBS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dev loss, dev acc:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresults_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'test_generator' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F-QKHTmJQhi1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
