Loads model and eval

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/ensembling/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "2nz38mJZXN_P",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6176d5e0-5e08-4e0e-e918-0c9ca5777450"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -52,33 +56,49 @@
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import *\n",
+        "from tensorflow.python.lib.io import file_io\n",
         "\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "\n",
+        "import keras\n",
+        "from keras import backend as K\n",
+        "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+        "from keras.models import load_model\n",
+        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "from keras.utils import plot_model\n",
+        "from sklearn.metrics import *\n",
+        "from keras.engine import Model\n",
+        "from keras.layers import Input, Flatten, Dense, Activation, Conv2D, MaxPool2D, BatchNormalization, Dropout, MaxPooling2D\n",
+        "import skimage\n",
+        "from skimage.transform import rescale, resize"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "c47dba29-7ab2-461e-92dd-e9a3890a7b20",
+        "outputId": "ceed8548-74bd-44a9-c627-5cf2005acc12",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 123
         }
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "data = pd.read_csv('/content/drive/My Drive/cs230 project/collab/fer2013/fer2013.csv')\n",
-        "\n",
-        "#print('Number of samples in the dataset: ', data.shape[0])\n",
-        "# Transform images from strings to lists of integers. TODO: use an array cast\n",
-        "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
+        "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,34 +116,12 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "l2DlU8lZeOg7",
         "colab_type": "code",
-        "id": "oXIX_VLMYJty",
         "colab": {}
       },
       "source": [
-        "#emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
-        "\n",
-        "# See the target distribution (check for imbalance)\n",
-        "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
-        "#target_counts.columns = ['emotion', 'number_samples']\n",
-        "#target_counts['emotion'] = target_counts['emotion'].map(emotion_cat)\n",
-        "#target_counts\n",
-        "\n",
-        "# Select randomly 10 images\n",
-        "#random_seed = 1\n",
-        "#data_sample = data.sample(10, random_state=random_seed)\n",
-        "#f, axarr = plt.subplots(2, 5, figsize=(20, 10))\n",
-        "\n",
-        "#i, j = 0, 0\n",
-        "#for idx, row in data_sample.iterrows():\n",
-        "#    img = np.array(row['pixels']).reshape(48,48)\n",
-        "#    axarr[i,j].imshow(img, cmap='gray')\n",
-        "#    axarr[i,j].set_title(emotion_cat[row['emotion']])\n",
-        "#    if j==4:\n",
-        "#        i += 1\n",
-        "#        j = 0\n",
-        "#    else:\n",
-        "#        j += 1"
+        "Resize_pixelsize = 197"
       ],
       "execution_count": 0,
       "outputs": []
@@ -131,28 +129,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xSJv4GKReUwb",
         "colab_type": "code",
-        "id": "hAjh6yOLYPZm",
         "colab": {}
       },
       "source": [
-        "data_train = data[data['Usage']=='Training']\n",
-        "#print('Number samples in the training dataset: ', data_train.shape[0])\n",
+        "# Function that reads the data from the csv file, increases the size of the images and returns the images and their labels\n",
+        "    # dataset: Data path\n",
+        "def get_data(dataset, pixel=48):\n",
+        "    \n",
+        "    file_stream = file_io.FileIO(dataset, mode='r')\n",
+        "    data = pd.read_csv(file_stream)\n",
+        "    data[' pixels'] = data[' pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])\n",
+        "    X, Y = data[' pixels'].tolist(), data['emotion'].values\n",
+        "    X = np.array(X, dtype='float32').reshape(-1,48,48,1)\n",
+        "    X = X/255.0\n",
+        "    if (pixel==48):\n",
+        "      X_res = X\n",
+        "    else:\n",
+        "      X_res = np.zeros((X.shape[0], Resize_pixelsize,Resize_pixelsize,3))\n",
+        "      for ind in range(X.shape[0]): \n",
+        "          sample = X[ind]\n",
+        "          sample = sample.reshape(48, 48)\n",
+        "          image_resized = resize(sample, (Resize_pixelsize, Resize_pixelsize), anti_aliasing=True)\n",
+        "          X_res[ind,:,:,:] = image_resized.reshape(Resize_pixelsize,Resize_pixelsize,1)\n",
         "\n",
-        "data_dev = data[data['Usage']=='PublicTest']\n",
-        "#print('Number samples in the development dataset: ', data_dev.shape[0])\n",
-        "\n",
-        "# Retrieve train input and target\n",
-        "X_train, y_train = data_train['pixels'].tolist(), data_train['emotion'].values\n",
-        "# Reshape images to 4D (num_samples, width, height, num_channels)\n",
-        "X_train = np.array(X_train, dtype='float32').reshape(-1,48,48,1)\n",
-        "# Normalize images with max (the maximum pixel intensity is 255)\n",
-        "X_train = X_train/255.0\n",
-        "\n",
-        "# Retrieve dev input and target\n",
-        "X_dev, y_dev = data_dev['pixels'].tolist(), data_dev['emotion'].values\n",
-        "X_dev = np.array(X_dev, dtype='float32').reshape(-1,48,48,1)\n",
-        "X_dev = X_dev/255.0"
+        "    Y_res = np.zeros((Y.size, 7))\n",
+        "    Y_res[np.arange(Y.size),Y] = 1    \n",
+        "    \n",
+        "    return  X_res, Y_res"
       ],
       "execution_count": 0,
       "outputs": []
@@ -160,102 +165,79 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "j8FT39NZgDHP",
         "colab_type": "code",
-        "id": "Yi3lopGhZIuT",
-        "outputId": "18830ae3-2226-4b50-db55-2b74ba8627b1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        }
+        "colab": {}
       },
       "source": [
-        "#Baseline model\n",
-        "model = tf.keras.models.Sequential([\n",
-        "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
-        "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
-        "    Dropout(0.25),\n",
-        "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
-        "    Dropout(0.25),\n",
-        "    MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
-        "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
-        "    Dropout(0.25),\n",
-        "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
-        "    Dropout(0.25),\n",
-        "    Flatten(),\n",
-        "    Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
-        "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
-        "])\n",
+        "dev_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/dev.csv'\n",
+        "test_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/test.csv'\n",
         "\n",
-        "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
+        "X_dev, Y_dev   = get_data(dev_dataset_dir)\n",
+        "X_test, Y_test   = get_data(test_dataset_dir)"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XmmvoAzOgQl4",
         "colab_type": "code",
-        "id": "iKzZuMBafv0a",
-        "scrolled": true,
-        "outputId": "ef27572c-b831-42cd-cfc4-233392fe61ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
-        }
-      },
-      "source": [
-        "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Train on 28709 samples, validate on 3589 samples\n",
-            "Epoch 1/10\n",
-            "28709/28709 [==============================] - 17s 584us/sample - loss: 1.6761 - accuracy: 0.3339 - val_loss: 1.5370 - val_accuracy: 0.4249\n",
-            "Epoch 2/10\n",
-            "28709/28709 [==============================] - 16s 560us/sample - loss: 1.4407 - accuracy: 0.4403 - val_loss: 1.4101 - val_accuracy: 0.4505\n",
-            "Epoch 3/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 1.2629 - accuracy: 0.5178 - val_loss: 1.2694 - val_accuracy: 0.5157\n",
-            "Epoch 4/10\n",
-            "28709/28709 [==============================] - 16s 566us/sample - loss: 1.0398 - accuracy: 0.6124 - val_loss: 1.2580 - val_accuracy: 0.5244\n",
-            "Epoch 5/10\n",
-            "28709/28709 [==============================] - 16s 564us/sample - loss: 0.7337 - accuracy: 0.7324 - val_loss: 1.2882 - val_accuracy: 0.5380\n",
-            "Epoch 6/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.4361 - accuracy: 0.8464 - val_loss: 1.5633 - val_accuracy: 0.5439\n",
-            "Epoch 7/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.2589 - accuracy: 0.9119 - val_loss: 1.6783 - val_accuracy: 0.5352\n",
-            "Epoch 8/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.1866 - accuracy: 0.9403 - val_loss: 1.9683 - val_accuracy: 0.5414\n",
-            "Epoch 9/10\n",
-            "28709/28709 [==============================] - 16s 565us/sample - loss: 0.1464 - accuracy: 0.9553 - val_loss: 2.1586 - val_accuracy: 0.5358\n",
-            "Epoch 10/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1323 - accuracy: 0.9607 - val_loss: 2.0127 - val_accuracy: 0.5325\n"
-          ],
-          "name": "stdout"
+          "height": 691
         },
+        "outputId": "80754297-ccb1-421c-d800-8ad89d1cd611"
+      },
+      "source": [
+        "model = load_model('/content/drive/My Drive/cs230 project/models/soa-SGD_LR_0.01000-EPOCHS_300-BS_128-DROPOUT_0.3test_acc_0.663.h5')"
+      ],
+      "execution_count": 8,
+      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f97d9e84e10>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:197: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:203: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:207: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:216: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:2041: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:148: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4267: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3733: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3576: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -263,6 +245,44 @@
       "cell_type": "code",
       "metadata": {
         "id": "ABbKc8-Eq64L",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        },
+        "outputId": "1a8106b0-fa45-4dd6-a110-469ce3297b19"
+      },
+      "source": [
+        "print('\\n# Evaluate on dev data')\n",
+        "results_dev = model.evaluate(X_dev,Y_dev)\n",
+        "print('dev loss, dev acc:', results_dev)\n",
+        "\n",
+        "print('\\n# Evaluate on test data')\n",
+        "results_test = model.evaluate(X_test,Y_test)\n",
+        "print('test loss, test acc:', results_test)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n",
+            "3589/3589 [==============================] - 6s 2ms/step\n",
+            "dev loss, dev acc: [1.0376124443799282, 0.6358317080049602]\n",
+            "\n",
+            "# Evaluate on test data\n",
+            "3589/3589 [==============================] - 0s 79us/step\n",
+            "test loss, test acc: [0.9683632022260324, 0.6631373641765957]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BeDZdqSOiAXA",
         "colab_type": "code",
         "colab": {}
       },
